# Capstone

./: README.md
Analysis/: excel.m  handspose_final (1).csv
final/Abdul/: 7920.json  7921.json  CMakeLists.txt  README.md  main.cpp
final/camera_nbg/: CMakeLists.txt  package.xml  skirting.rviz
final/camera_nbg/include/: camera_nbg.h
final/camera_nbg/launch/: camera_nbg.launch  point_cloud_xyz.launch  point_cloud_xyz.rviz  point_cloud_xyzrgb.launch  point_cloud_xyzrgb.rviz
final/camera_nbg/src/: camera_nbg.cpp  camera_nbg.h  logger.cpp  logger.h  main.cpp
final/openpose_parser/: CMakeLists.txt  package.xml
final/openpose_parser/launch/: project_setup.launch  project_setup_noetic.launch
final/openpose_parser/src/: extract_hands.cpp
final/openpose_parser/srv/: LoadHands.srv
final/ply_publisher/: CMakeLists.txt  README.md
final/ply_publisher/launch/: carcass_jbs_tf.launch  carcass_tf.launch  livestock_pc_logger.launch  livestock_tf.launch  pc_carcass_convertor.launch  pc_carcass_convertor.launch.bak  pc_convertor.launch  pc_jbs_convertor.launch  pc_logger.launch
final/unbag/: CMakeLists.txt  package.xml
final/unbag/src/: unbag.cpp
